[gd_scene load_steps=4 format=3 uid="uid://di44cowlm865b"]

[ext_resource type="FontFile" uid="uid://r8canikevo76" path="res://assets/fonts/CalSans-SemiBold.otf" id="1_573jp"]
[ext_resource type="Script" path="res://scripts/menus/main_menu.gd" id="1_thdx3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fnjfd"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_thdx3")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 1
tabs_visible = false

[node name="1" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="Label" type="Label" parent="TabContainer/1"]
layout_mode = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 788.0
offset_bottom = 136.0
theme_override_fonts/font = ExtResource("1_573jp")
theme_override_font_sizes/font_size = 128
text = "Racing Game"

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/1"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -368.0
offset_right = 316.0
grow_vertical = 0
theme_override_constants/separation = 12
alignment = 2

[node name="PlayButton" type="Button" parent="TabContainer/1/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.27, 0.659333, 1, 1)
theme_override_fonts/font = ExtResource("1_573jp")
theme_override_font_sizes/font_size = 96
theme_override_styles/focus = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/disabled = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/hover = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/normal = SubResource("StyleBoxTexture_fnjfd")
text = "Play"
alignment = 0

[node name="CreditsButton" type="Button" parent="TabContainer/1/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.27, 0.659333, 1, 1)
theme_override_fonts/font = ExtResource("1_573jp")
theme_override_font_sizes/font_size = 96
theme_override_styles/focus = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/disabled = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/hover = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/normal = SubResource("StyleBoxTexture_fnjfd")
text = "Credits"
alignment = 0

[node name="ExitButton" type="Button" parent="TabContainer/1/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.27, 0.659333, 1, 1)
theme_override_fonts/font = ExtResource("1_573jp")
theme_override_font_sizes/font_size = 96
theme_override_styles/focus = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/disabled = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/hover = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_fnjfd")
theme_override_styles/normal = SubResource("StyleBoxTexture_fnjfd")
text = "Exit"
alignment = 0

[node name="2" type="Control" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="Label" type="Label" parent="TabContainer/2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -344.0
offset_top = 16.0
offset_right = 348.0
offset_bottom = 136.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_573jp")
theme_override_font_sizes/font_size = 128
text = "Select Track"

[node name="BackButton" type="Button" parent="TabContainer/2"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 161.0
offset_bottom = 76.0
theme_override_fonts/font = ExtResource("1_573jp")
theme_override_font_sizes/font_size = 64
text = "Back"

[connection signal="pressed" from="TabContainer/1/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="TabContainer/1/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="TabContainer/1/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="TabContainer/2/BackButton" to="." method="_on_back_button_pressed"]
